# django-todo

./: .gitignore  README.md  conftest.py  pyproject.toml
apps/todo/: admin.py  api.py  apps.py  models.py  schema.py  tests.py
apps/todo/migrations/: 0001_initial.py  0002_todo_owner.py  0003_alter_todo_hashtag.py
apps/user/: admin.py  api.py  schema.py  tasks.py  tests.py
apps/user/migrations/: 0001_initial.py  0002_alter_user_password.py  0003_alter_user_options_alter_user_managers_and_more.py
todo_app/: api.py  celery.py  settings.py
